--- a/Ваш БанкирЪ/AddExpensesPage.xaml
+++ b/Ваш БанкирЪ/AddExpensesPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+    <Grid x:Name="ExpensesPageGrid">
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="BigWindowTrigger">
