--- a/Ваш БанкирЪ/App.xaml
+++ b/Ваш БанкирЪ/App.xaml
@@ -2,6 +2,7 @@
     x:Class="Ваш_БанкирЪ.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Ваш_БанкирЪ">
-
+    xmlns:local="using:Ваш_БанкирЪ"
+    RequestedTheme="Dark">
+    
 </Application>
