--- a/Ваш БанкирЪ/LoginPage.xaml
+++ b/Ваш БанкирЪ/LoginPage.xaml
@@ -21,8 +21,8 @@
                  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Margin="0,-140,0,0" Grid.Row="1"/>
         <Image Source="Assets/logo-placeholder.png"
                HorizontalAlignment="Center" VerticalAlignment="Center" Height="265" Width="265" Margin="0,0,0,0" Grid.Row="0"/>
-        <Button x:Name="LoginButton" Width="300" Height="50" Content="Войти" 
-                HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Center" FontSize="24" Grid.Row="1" Click="loginButton_Clicked">
+        <Button x:Name="LoginButton" Width="300" Height="50" Content="Войти" Style="{ThemeResource ButtonRevealStyle}"
+                HorizontalAlignment="Center" Margin="0 0 0 0" VerticalAlignment="Center" FontSize="24" Grid.Row="1" Click="loginButton_Clicked">
             <Button.Flyout>
                 <Flyout x:Name="PasswordErrorFlyout">
                     <Flyout.Content>
@@ -34,7 +34,8 @@
                 </Flyout>
             </Button.Flyout>
         </Button>
-        <TextBlock x:Name="versionTextBox" VerticalAlignment="Bottom" HorizontalAlignment="Center" Grid.Row="1" Margin="0 0 0 25"/>
-        <TextBlock Text="© Dmitry Rybalko" VerticalAlignment="Bottom" HorizontalAlignment="Center" Grid.Row="1" Margin="0 0 0 5"/>
+        <Button x:Name="CreateNewUserButton" Width="300" Height="50" Content="Создать пользователя" Style="{ThemeResource ButtonRevealStyle}"
+                HorizontalAlignment="Center" Margin="0 110 0 0" VerticalAlignment="Center" FontSize="24" Grid.Row="1" Click="CreateNewUserButton_OnClick"/>
+            <TextBlock x:Name="versionTextBlock" Text="" VerticalAlignment="Bottom" HorizontalAlignment="Center" Grid.Row="1" Margin="0 0 0 5"/>
     </Grid>
 </Page>
