--- a/Ваш БанкирЪ/SettingsPage.xaml
+++ b/Ваш БанкирЪ/SettingsPage.xaml
@@ -19,7 +19,7 @@
                 <Flyout x:Name="AboutAppFlyout">
                     <Flyout.Content>
                         <StackPanel>
-                            <TextBlock Text="Версия 0.2.8 Pre-release © Dmitry Rybalko 2020" Margin="0 0 0 20"/>
+                            <TextBlock Text="" x:Name="AboutAppFlyoutTextBlock" Margin="0 0 0 20"/>
                             <TextBlock Text="https://github.com/RMarK0/Your_Bankir" Margin="0 0 0 20"/>
                             <Button Content="Закрыть" x:Name="FlyoutButton" Click="FlyoutButton_OnClick"/>
                         </StackPanel>
