--- a/Ваш БанкирЪ/FinanceAnalysisPage.xaml
+++ b/Ваш БанкирЪ/FinanceAnalysisPage.xaml
@@ -17,22 +17,132 @@
 
         <ScrollViewer x:Name="StatisticsViewer" Grid.Row="0">
             <Grid x:Name="StatisticsGrid">
-                <TextBlock FontSize="20" Text=""/>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                        <ch:Chart x:Name="IncomesChart" Width="450" Height="450" VerticalAlignment="Center" HorizontalAlignment="Right"
+                              Margin="0 0 100 0" Grid.Column="0">
+                    <ch:Chart.Palette>
+                        <ch:ResourceDictionaryCollection>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#c00000"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#f000a9"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#4000b0"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#0000c0"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#00c0f0"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#00f02a"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#e4f000"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#f09000"/>
+                                </Style>
+                            </ResourceDictionary>
+                        </ch:ResourceDictionaryCollection>
+                    </ch:Chart.Palette>
+                            <ch:PieSeries Margin="0" IndependentValuePath="DataName" DependentValuePath="DataValue"
+                                  IsSelectionEnabled="False">
+
+                    </ch:PieSeries>
+                </ch:Chart>
+                <ch:Chart x:Name="ExpensesChart" Width="450" Height="450" VerticalAlignment="Center" HorizontalAlignment="Left"
+                          Margin="100 0 0 0" Grid.Column="1">
+                    <ch:Chart.Palette>
+                        <ch:ResourceDictionaryCollection>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#c00000"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#f000a9"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#4000b0"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#0000c0"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#00c0f0"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#00d188"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#00f02a"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#e4f000"/>
+                                </Style>
+                            </ResourceDictionary>
+                            <ResourceDictionary>
+                                <Style x:Key="DataPointStyle" TargetType="Control">
+                                    <Setter Property="Background" Value="#f09000"/>
+                                </Style>
+                            </ResourceDictionary>
+                        </ch:ResourceDictionaryCollection>
+                    </ch:Chart.Palette>
+                    <ch:PieSeries Margin="0" IndependentValuePath="DataName" DependentValuePath="DataValue"
+                                  IsSelectionEnabled="False">
+
+                    </ch:PieSeries>
+                </ch:Chart>
             </Grid>
         </ScrollViewer>
 
         <Rectangle Grid.Row="1" Height="200" Width="6000" VerticalAlignment="Center" HorizontalAlignment="Center"
                    x:Name="BottomFiller"/>
         <Button Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Width="70" Height="70"
-                Margin="0 0 350 50" Content="🢀" FontSize="30"/>
+                Margin="0 0 350 50" Content="🢀" FontSize="30" Click="DecrementDisplayedDate"/>
         <Button Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Width="70" Height="70"
-                Margin="350 0 0 50" Content="🢂" FontSize="30"/>
-        <TextBlock Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Декабрь 2020" 
-                   Margin="0 0 0 50" FontSize="30"/>
+                Margin="350 0 0 50" Content="🢂" FontSize="30" Click="IncrementDisplayedDate"/>
+        <TextBlock x:Name="DisplayedDateTextBlock" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" 
+                   Text="Сентябрь 2020" Margin="0 0 0 50" FontSize="30"/>
         <TextBlock Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Только для этого пользователя"
-                   Margin="0 100 100 0" FontSize="30"/>
+                   Margin="0 100 50 0" FontSize="25"/>
         <ToggleSwitch Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" OnContent="" OffContent="" IsOn="False"
-                      Margin="520 100 0 0" />
+                      Name="UserSwitch" Margin="480 105 0 0" Toggled="ToggleSwitch_OnToggled"/>
         
     </Grid>
 </Page>
